--- a/index.html
+++ b/index.html
@@ -106,6 +106,68 @@
       </div>
     </section><!-- End About Section -->
 
+  <!-- ======= Projects Section ======= -->
+  <section id="projects" class="projects">
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-title">
+        <h2>Projects</h2>
+        <p>Here are some of the projects I have worked on:</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="project-item">
+            <h4>College Management System</h4>
+            <p>This project is a web application built using Django, aimed at improving the efficiency and organization of college records. The web application provides a user-friendly interface to manage various aspects of college records, including student information, course schedules, and faculty details.</p>
+            <a href="https://github.com/KryptonGuy/college-management-system" target="_blank" class="btn btn-primary">View on GitHub</a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="project-item">
+            <h4>Employee Profile Management REST API</h4>
+            <p>With this REST API, we aim to simplify the process of managing employee profiles by providing a comprehensive and user-friendly solution.</p>
+            <a href="https://github.com/KryptonGuy/profile_api_flask" target="_blank" class="btn btn-primary">View on GitHub</a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="project-item">
+            <h4>Mood Harmony Player</h4>
+            <p>Welcome to Mood Harmony Player, your personalized music recommendation application! Mood Harmony Player integrates facial emotion detection with Spotify's music catalog to recommend playlists tailored to your emotional state.</p>
+            <a href="https://github.com/KryptonGuy/Mood-Harmony-Player" target="_blank" class="btn btn-primary">View on GitHub</a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="project-item">
+            <h4>LetsChat</h4>
+            <p>A chat application that provides real-time messaging with a clean and intuitive interface. It supports features like user authentication, group chats, and media sharing, making it a versatile communication tool.</p>
+            <a href="https://github.com/KryptonGuy/LetsChat" target="_blank" class="btn btn-primary">View on GitHub</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section><!-- End Projects Section -->
+
+  <!-- ======= Certificates Section ======= -->
+  <section id="certificates" class="certificates">
+    <div class="container" data-aos="fade-up">
+
+      <div class="section-title">
+        <h2>Certificates</h2>
+        <p>Here are some of the certifications I have achieved:</p>
+      </div>
+
+      <ul class="list-group">
+        <li class="list-group-item"><i class="bi bi-check-circle"></i> AWS Certified Solutions Architect – Associate</li>
+        <li class="list-group-item"><i class="bi bi-check-circle"></i> AWS Certified DevOps Engineer – Professional</li>
+        <li class="list-group-item"><i class="bi bi-check-circle"></i> AWS Certified Cloud Practitioner</li>
+        <li class="list-group-item"><i class="bi bi-check-circle"></i> Google Cloud Certified – Professional Cloud Architect</li>
+        <li class="list-group-item"><i class="bi bi-check-circle"></i> Google Cloud Certified – Associate Cloud Engineer</li>
+      </ul>
+
+    </div>
+  </section><!-- End Certificates Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
